Prueba 2, subiendo modificación al index. agrego etiqueta h2

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <header>
-
+        <h2>Fulanito López</h2>
     </header>
-    
     <main>
 
     </main>
-
     <footer>
 
     </footer>
