Agrego nombre de empresa e icono.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Style/style.css">
     <link rel="icon" type="imagen/ico" href="./img/favicon.svg">
-    <title>Fulanito López</title>
+    <title>DevScrum</title>
 </head>
 <body>
     <header>
-        <h2>Fulanito López</h2>
+        <nav >
+            <h2 ><img src="./img/favicon.svg" alt="Icono"> DevScrum</h2>
+        </nav>
     </header>
     <main>
 
