Prueba de acceso a ruta de imagen en google fotos.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <header>
         <nav >
-            <h2 ><img src="./img/favicon.svg" alt="Icono"> DevScrum</h2>
+            <h2 ><img src="./img/favicon.svg" alt="Icono" width="3%" height="3%"> DevScrum</h2>
         </nav>
     </header>
     <main>
+        <div class="presentacionEmpresa">
+            <img  src="https://lh3.googleusercontent.com/r2r6iWmih3LIyiFhpPJjAkibQQAvAuLtIXNO6SUTTGHY6kN00CXa7EWF0HQ3yyFxKa8diLqOU56CU-8Pq2utO11xAJFm4WUba_fgRDaTVFS-FQvIcynEEKIzYb4rlqBIX-INTmnLNsskOGlmp9v6_MPJn3RljaNeH1x8bAGlXbieOic47hI5T7qV6EyHEK2-0eCvrB_zaDUdmqC0VsMsrIv2OO3P2-KV4TPMoV_ZbU7Oo8MIoE2WIUxwd0VWXUEitIakvL00pmy5bwCtD3efWCEctIBEZlXwaKu2dsHfYBavEfuqgk2XXIbOpWWcGcxx6R7DJTakwG0_IGRH3HApZDaIGGeiJsFsFC3bSA5tlBLhwttrY6rmL2Q-JEtAQcMjJWeMCF5q7gAbaSGhwVAJ47rCJeSIcH4fjqpuSyrBsyV663dfso_8prtCe-L4IeMpJzXiC4UgzsEzrD9baxb1ODh9S8oLsxIhCOtNn0CABmmGkd7VrITV3fzM6a93H8AmEsk2kWDP-_7zxhPGUWz_tsWFzIfxY8eJtoznX1Wds_9RLYAn_Fb7Q4PyDcDFTSM5MConO8diL8FSDL2pTD4sUKAdVXiLjUltG4ZsIXgnq2Z4K0XxsooDqGejTLFZeKGHpCLc6ANB07KWvcgngxlauQI_2p5lyYxgZoYQTIEWTVC2VG91Nx3c__AC2N8hw9PdY2ZDIJjTlQJlm1KBOJASXQuv8-na9X580MQbo1MNT2EEZFDIBiQ5YfdfsRJ3roFhe8bCrCKB13Ppm_L2FX78RJNF28AyEJPVxeTNntiiLJxVE9v2VzXdFRp24EoAwhuJcbpoiDnSpRiYuItBaCIaTcZbqiI4Cd9tyybx5k4rjmAuYCUdvoUjYjU7ySVq2-euVgbrpqINP3oCNwIYwUY7xQgmVHJ2VaCMjole67IoNWT0_-5V=w800-h450-s-no?authuser=0" alt="Probando">
+        </div>
 
     </main>
     <footer>
