se agrega header

--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <section class="encabezado">
+            <div class="icono">
+                <img class="favicon" src="./img/favicon.svg" alt="Icono">
+                <h2 >DevScrum</h2>
+            </div>
+            <nav>
+                <a href="">CONTÁCTANOS</a>
+                <a href="">SOLUCIONES</a>
+                <a href="">NOSOTROS</a>
+                <a href="">OFICINAS</a>
+                <a href="">SOLICITAR REUNIÓN</a>
+            </nav>
+        </section>
+    </header>
     <main>
     <form>
         <h2>Contactanos</h2>
