--- a/index.html
+++ b/index.html
@@ -11,32 +11,48 @@
     <link rel="icon" type="imagen/ico" href="./img/favicon.svg">
     <title>DevScrum</title>
 </head>
+
 <body>
     <header>
-        <section class="encabezado">
-            <div class="icono">
-                <img class="favicon" src="./img/favicon.svg" alt="Icono">
-                <h2 >DevScrum</h2>
-            </div>
             <nav>
-                <a href="">CONTÁCTANOS</a>
-                <a href="">SOLUCIONES</a>
-                <a href="">NOSOTROS</a>
-                <a href="">OFICINAS</a>
-                <a href="">SOLICITAR REUNIÓN</a>
+                <div class="encabezadoFijo">
+                    <div class="logo">
+                        <img class="favicon" src="./img/favicon.svg" alt="Icono">
+                        <h2 >DevScrum</h2>
+                    </div>
+                    <div class="enlaces">
+                        <a href="./contacto.html">CONTÁCTANOS</a>
+                        <a href="">SOLUCIONES</a>
+                        <a href="">NOSOTROS</a>
+                        <a href="">OFICINAS</a>
+                        <a class="textoNegrita" href="">SOLICITAR REUNIÓN</a>
+                    </div>
+                </div>
             </nav>
-        </section>
     </header>
 
     <main>
+        <div class="cobertor">
         <div class="presentacionEmpresa">
-            <img class="imgRecortada"  src="https://lh3.googleusercontent.com/r2r6iWmih3LIyiFhpPJjAkibQQAvAuLtIXNO6SUTTGHY6kN00CXa7EWF0HQ3yyFxKa8diLqOU56CU-8Pq2utO11xAJFm4WUba_fgRDaTVFS-FQvIcynEEKIzYb4rlqBIX-INTmnLNsskOGlmp9v6_MPJn3RljaNeH1x8bAGlXbieOic47hI5T7qV6EyHEK2-0eCvrB_zaDUdmqC0VsMsrIv2OO3P2-KV4TPMoV_ZbU7Oo8MIoE2WIUxwd0VWXUEitIakvL00pmy5bwCtD3efWCEctIBEZlXwaKu2dsHfYBavEfuqgk2XXIbOpWWcGcxx6R7DJTakwG0_IGRH3HApZDaIGGeiJsFsFC3bSA5tlBLhwttrY6rmL2Q-JEtAQcMjJWeMCF5q7gAbaSGhwVAJ47rCJeSIcH4fjqpuSyrBsyV663dfso_8prtCe-L4IeMpJzXiC4UgzsEzrD9baxb1ODh9S8oLsxIhCOtNn0CABmmGkd7VrITV3fzM6a93H8AmEsk2kWDP-_7zxhPGUWz_tsWFzIfxY8eJtoznX1Wds_9RLYAn_Fb7Q4PyDcDFTSM5MConO8diL8FSDL2pTD4sUKAdVXiLjUltG4ZsIXgnq2Z4K0XxsooDqGejTLFZeKGHpCLc6ANB07KWvcgngxlauQI_2p5lyYxgZoYQTIEWTVC2VG91Nx3c__AC2N8hw9PdY2ZDIJjTlQJlm1KBOJASXQuv8-na9X580MQbo1MNT2EEZFDIBiQ5YfdfsRJ3roFhe8bCrCKB13Ppm_L2FX78RJNF28AyEJPVxeTNntiiLJxVE9v2VzXdFRp24EoAwhuJcbpoiDnSpRiYuItBaCIaTcZbqiI4Cd9tyybx5k4rjmAuYCUdvoUjYjU7ySVq2-euVgbrpqINP3oCNwIYwUY7xQgmVHJ2VaCMjole67IoNWT0_-5V=w800-h450-s-no?authuser=0" alt="Probando">
+            <h2>Tu crecimiento, nuestra prioridad</h2>
+            <p>Somos una empresa dedicada al desarrollo de software. <br>
+                Soluciones pensadas para tu empresa. <br>
+                Potecia tu crecimiento.</p>
+                <div></div>
+                <div></div>
+                <div class="botonContactenosDePresentacion">
+                    <form action="">
+                        <input type="submit" value="Contáctanos" class="btn-contactanos">
+                    </form>
+                </div>                
         </div>
+    </div>
 
     </main>
-    <footer>
 
+    <footer>
     </footer>
+
     <script src="./Js/script.js"></script>
 </body>
 </html>
