Pruebo agregando un enlace a una imagen alojada en ibb.co, porque las alojadas en git no se muestran.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <img class="favicon" src="./img/favicon.svg" alt="Icono">
                         <h2 >DevScrum</h2>
                     </div>
+
                     <div class="enlaces">
                         <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
                         <a href="#soluciones">SOLUCIONES</a>
@@ -64,17 +65,23 @@
         <span class="tituloColaboradores">Harán tu vida más  <strong>fácil</strong>... conócelos!</span>
         <div class="containerColaboradores">
         <div class="colaborador1">
+            <a class="sobresalir" href="">
             <div class="imgColaborador1"></div>
+        </a>
             <span class="nombreColaborador">Gustavo</span>
             <p class="aptitudesColaborador">Desarrollador Web</p>
         </div>
         <div class="colaborador2">
+            <a class="sobresalir" href="">
             <div class="imgColaborador2"></div>
+        </a>
             <span class="nombreColaborador">Jesica</span>
             <p class="aptitudesColaborador">Desarrollador Web</p>
         </div>
         <div class="colaborador3">
+            <a class="sobresalir" href="">
             <div class="imgColaborador3"></div>
+        </a>
             <span class="nombreColaborador">Yair</span>
             <p class="aptitudesColaborador">Desarrollador Web</p>
         </div>
@@ -85,18 +92,25 @@
     <div class="seccionSoluciones" id="soluciones">
         <span class="tituloColaboradores"><strong> Conoce nuestras soluciones</strong></span>
         <div class="containerColaboradores">
-        <div class="colaborador1">
-            <div class="imgSolucion1"></div>
+            <div class="colaborador1">
+            <a class="sobresalir" href="">
+                <div class="imgSolucion1"></div>
+            </a>
             <span class="nombreColaborador">Gustavo</span>
             <p class="aptitudesColaborador">Desarrollador Web</p>
         </div>
+
         <div class="colaborador2">
+            <a class="sobresalir" href="">
             <div class="imgSolucion2"></div>
+        </a>
             <span class="nombreColaborador">Jesica</span>
             <p class="aptitudesColaborador">Desarrollador Web</p>
         </div>
         <div class="colaborador3">
+            <a class="sobresalir" href="">
             <div class="imgSolucion3"></div>
+        </a>
             <span class="nombreColaborador">Yair</span>
             <p class="aptitudesColaborador">Desarrollador Web</p>
         </div>
@@ -125,6 +139,10 @@
         </div>
     </div>
     <a class="btn-rosa" href="./FormTresPasos.html">Solicitar reunión</a>
+    </div>
+    <div class="Prueba">
+        
+
     </div>
 
     </main>
