Agrego animaciones a la targetas.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <span class="tituloColaboradores"><strong> Conoce nuestras soluciones</strong></span>
         <div class="containerColaboradores">
             <div class="colaborador1">
-            <a class="sobresalir" href="">
+            <a class="sobresalir" href="https://yairgaston.github.io/Registro-de-Usuario/" target="_blank">
                 <div class="imgSolucion1"></div>
             </a>
             <span class="nombreColaborador">Gustavo</span>
