Posicionamiento final de elementos. faltan iconos del footer.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
                     <div class="enlaces">
                         <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
-                        <a href="#soluciones">SOLUCIONES</a>
                         <a href="#nosotros">NOSOTROS</a>
+                        <a href="#soluciones">SOLUCIONES</a>
                         <a href="#oficinas">OFICINAS</a>
                         <a class="textoNegrita" href="./FormTresPasos.html">SOLICITAR REUNIÓN</a>
                     </div>
@@ -33,7 +33,7 @@
     </header>
     <main>
         <div class="presentacionEmpresa">
-            <h2>Tu crecimiento, nuestra prioridad</h2>
+            <h2>Tu evolución, nuestra prioridad</h2>
             <p>Somos una empresa dedicada al desarrollo de software. <br>
                 Soluciones pensadas para tu empresa. <br>
                 Potecia tu crecimiento.</p>
@@ -44,102 +44,104 @@
                 </div>                
         </div>
     
-    <div class="nosotros" id="nosotros">
-        <h3>Conformamos una basta experiencia</h3>
-        <br>
-        <br>
-        <br>
-        <h3>...para brindarte la mejor solución.</h3>
-        <br>
-        <p>Déjate llevar por el mejor equipo de desarrolladores del mercado, con un solo enfoque... brindarte las mejores soluciones para tu empresa.</p>
-        <br>
-        <p>Serás parte en cada paso del proceso.
-            Integremos tu experia en una solución virtual para tu empresa y tus clientes. Que esperas?</p>
-            
-            <div class="botonContactenosDeNosotros">
-                <a class="btn-rosa" href="./contacto.html">Contáctanos</a>
-            </div>                
-    </div>
+        <div class="seccionNosotros margenScrollNosotros" id="nosotros">
+            <span  ><strong>Adelante!</strong>, conoce un poco sobre nosotros.</span>
+        </div>
+        <div class="nosotros " >
+            <h3>Conformamos una basta experiencia</h3>
+            <br>
+            <h3>...para brindarte la mejor solución.</h3>
+            <p>Déjate llevar por el mejor equipo de desarrolladores del mercado, con un solo enfoque... brindarte las mejores soluciones para tu empresa.</p>
+            <p>Serás parte en cada paso del proceso.
+                Integremos tu experia en una solución virtual para tu empresa y tus clientes. <strong> Que esperas</strong>?</p>
+                <div class="botonContactenosDeNosotros">
+                    <a class="btn-rosa" href="./contacto.html">Contáctanos</a>
+                </div>                
+        </div>
 
-    <div class="seccionColaboradores">
-        <span class="tituloColaboradores">Harán tu vida más  <strong>fácil</strong>... conócelos!</span>
-        <div class="containerColaboradores">
-        <div class="colaborador1">
-            <a class="sobresalir" href="">
-            <div class="imgColaborador1"></div>
-        </a>
-            <span class="nombreColaborador">Gustavo</span>
-            <p class="aptitudesColaborador">Desarrollador Web</p>
-        </div>
-        <div class="colaborador2">
-            <a class="sobresalir" href="">
-            <div class="imgColaborador2"></div>
-        </a>
-            <span class="nombreColaborador">Jesica</span>
-            <p class="aptitudesColaborador">Desarrollador Web</p>
-        </div>
-        <div class="colaborador3">
-            <a class="sobresalir" href="">
-            <div class="imgColaborador3"></div>
-        </a>
-            <span class="nombreColaborador">Yair</span>
-            <p class="aptitudesColaborador">Desarrollador Web</p>
-        </div>
-    </div>
-    <a class="btn-rosa" href="./FormTresPasos.html">Solicitar reunión</a>
-    </div>
-
-    <div class="seccionSoluciones" id="soluciones">
-        <span class="tituloColaboradores"><strong> Conoce nuestras soluciones</strong></span>
-        <div class="containerColaboradores">
+        <div class="seccionColaboradores">
+            <span class="tituloColaboradores">Harán tu vida más  <strong>fácil</strong>... conócelos!</span>
+            <div class="containerColaboradores">
             <div class="colaborador1">
-            <a class="sobresalir" href="https://yairgaston.github.io/Registro-de-Usuario/" target="_blank">
-                <div class="imgSolucion1"></div>
+                <a class="sobresalir" href="">
+                <div class="imgColaborador1"></div>
             </a>
-            <span class="nombreColaborador">Gustavo</span>
-            <p class="aptitudesColaborador">Desarrollador Web</p>
-        </div>
-
-        <div class="colaborador2">
-            <a class="sobresalir" href="">
-            <div class="imgSolucion2"></div>
-        </a>
-            <span class="nombreColaborador">Jesica</span>
-            <p class="aptitudesColaborador">Desarrollador Web</p>
-        </div>
-        <div class="colaborador3">
-            <a class="sobresalir" href="">
-            <div class="imgSolucion3"></div>
-        </a>
-            <span class="nombreColaborador">Yair</span>
-            <p class="aptitudesColaborador">Desarrollador Web</p>
-        </div>
-    </div>
-    <a class="btn-verde" href="./contacto.html">Contáctanos</a>
-    </div>
-
-    <div class="seccionOficinas" id="oficinas">
-        <span class="oficinas tituloColaboradores"><strong>Nuestras oficinas</strong></span>
-        <div class="containerColaboradores">
-
-        <div class="oficina1">
-            <div class="mapaOficina">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d75442.75568307207!2d-67.78591732995316!3d-53.77905506745673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc4b1644a97ec1cb%3A0x48273f4501527328!2sR%C3%ADo%20Grande%2C%20Tierra%20del%20Fuego!5e0!3m2!1ses-419!2sar!4v1680924697698!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <span class="nombreColaborador">Gustavo</span>
+                <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
-            <span class="ProvinciaOficina1 "><strong>Río Grande, Tierra del Fuego</strong> </span>
-            <p class="operacionesOficina">Estudio y planificación de soluciones</p>
+            <div class="colaborador2">
+                <a class="sobresalir" href="">
+                <div class="imgColaborador2"></div>
+            </a>
+                <span class="nombreColaborador">Jesica</span>
+                <p class="aptitudesColaborador">Desarrollador Web</p>
+            </div>
+            <div class="colaborador3">
+                <a class="sobresalir" href="">
+                <div class="imgColaborador3"></div>
+            </a>
+                <span class="nombreColaborador">Yair</span>
+                <p class="aptitudesColaborador">Desarrollador Web</p>
+            </div>
+        </div>
+        <a class="btn-rosa" href="./FormTresPasos.html">Solicitar reunión</a>
         </div>
 
-        <div class="oficina2">
-            <div class="mapaOficina">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217955.0018011307!2d-64.35915113495126!3d-31.399054724755366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses-419!2sar!4v1680924781651!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="seccionSoluciones margenScroll" id="soluciones">
+            <span class="tituloColaboradores"><strong> Conoce nuestras soluciones</strong></span>
+            <div class="containerColaboradores">
+                <div class="colaborador1">
+                <a class="sobresalir" href="https://yairgaston.github.io/Registro-de-Usuario/" target="_blank">
+                    <div class="imgSolucion1"></div>
+                </a>
+                <span class="nombreColaborador">Gustavo</span>
+                <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
-            <span class="ProvinciaOficina2"><strong>Córdoba, Córdoba</strong></span>
-            <p class="operacionesOficina">Estudio y desarrollo de soluciones</p>
+
+            <div class="colaborador2">
+                <a class="sobresalir" href="">
+                <div class="imgSolucion2"></div>
+            </a>
+                <span class="nombreColaborador">Jesica</span>
+                <p class="aptitudesColaborador">Desarrollador Web</p>
+            </div>
+            <div class="colaborador3">
+                <a class="sobresalir" href="">
+                <div class="imgSolucion3"></div>
+            </a>
+                <span class="nombreColaborador">Yair</span>
+                <p class="aptitudesColaborador">Desarrollador Web</p>
+            </div>
         </div>
-    </div>
-    <a class="btn-rosa" href="./FormTresPasos.html">Solicitar reunión</a>
-    </div>
+        <a class="btn-verde" href="./contacto.html">Contáctanos</a>
+        </div>
+
+        <div class="seccionOficinas margenScroll" id="oficinas">
+            <span class="oficinas tituloColaboradores"><strong>Nuestras oficinas</strong></span>
+            <div class="containerColaboradores">
+
+            <div class="oficina1">
+                <div class="mapaOficina">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d75442.75568307207!2d-67.78591732995316!3d-53.77905506745673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc4b1644a97ec1cb%3A0x48273f4501527328!2sR%C3%ADo%20Grande%2C%20Tierra%20del%20Fuego!5e0!3m2!1ses-419!2sar!4v1680924697698!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="leyendaMapas">
+                <span class="ProvinciaOficina1 "><strong>Río Grande, Tierra del Fuego</strong> </span>
+                <p class="operacionesOficina">Estudio y planificación de soluciones</p>
+            </div>
+            </div>
+
+            <div class="oficina2">
+                <div class="mapaOficina">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217955.0018011307!2d-64.35915113495126!3d-31.399054724755366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses-419!2sar!4v1680924781651!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="leyendaMapas">
+                <span class="ProvinciaOficina2"><strong>Córdoba, Córdoba</strong></span>
+                <p class="operacionesOficina">Estudio y desarrollo de soluciones</p>
+            </div>
+            </div>
+        </div>
+        <a class="btn-rosa" href="./FormTresPasos.html">Solicitar reunión</a>
+        </div>
 
     </main>
 
