creando página de portfolio.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#nosotros">NOSOTROS</a>
                         <a href="#soluciones">SOLUCIONES</a>
                         <a href="#oficinas">OFICINAS</a>
-                        <a class="textoNegrita" href="./FormTresPasos.html">SOLICITAR REUNIÓN</a>
+                        <a class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
                     </div>
                     <button class="btn-menu">
                         <i class="bi bi-list"></i>
@@ -143,7 +143,7 @@
             </div>
             </div>
         </div>
-        <a class="btn-rosa" href="./FormTresPasos.html">Solicitar reunión</a>
+        <a class="btn-rosa" href="./FormCompleto.html">Solicitar reunión</a>
         </div>
     </main>
 
@@ -159,7 +159,7 @@
         </div>
 
         <a class="btn-verde delFooter1" href="./contacto.html">Contáctanos</a>
-        <a class="btn-rosa delFooter" href="./FormTresPasos.html">Solicitar reunión</a>
+        <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
         <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
     </footer>
 
