Portfolio terminadp, falta la parte de JS. Index y portfolio 100% responsive.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             <nav>
                 <div class="encabezadoFijo">
                     <div class="logo">
+                        <a href="./index.html">
                         <img class="favicon" src="./img/favicon.svg" alt="Icono">
                         <h2 >DevScrum</h2>
+                    </a>
                     </div>
 
                     <div class="enlaces">
@@ -39,11 +41,8 @@
             <h2>Tu evolución, nuestra prioridad</h2>
             <p>Somos una empresa dedicada al desarrollo de software. <br>
                 Soluciones pensadas para tu empresa. <br>
-                Potecia tu crecimiento.</p>
-                <div></div>
-                <div></div>
-                <div class="botonContactenosDePresentacion">
-                    <a class="btn-verde" href="./contacto.html">Contáctanos</a>
+                Potecia tu crecimiento.</p><br>
+                <div><a class="btn-verde" href="./contacto.html">Contáctanos</a>
                 </div>                
         </div>
     
@@ -66,21 +65,21 @@
             <span class="tituloColaboradores">Harán tu vida más  <strong>fácil</strong>... conócelos!</span>
             <div class="containerColaboradores">
             <div class="colaborador1">
-                <a class="sobresalir" href="">
+                <a class="sobresalir" href="./pages/portfolio.html">
                 <div class="imgColaborador1"></div>
             </a>
                 <span class="nombreColaborador">Gustavo</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
             <div class="colaborador2">
-                <a class="sobresalir" href="">
+                <a class="sobresalir" href="./pages/portfolio.html">
                 <div class="imgColaborador2"></div>
             </a>
                 <span class="nombreColaborador">Jesica</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
             <div class="colaborador3">
-                <a class="sobresalir" href="">
+                <a class="sobresalir" href="./pages/portfolio.html">
                 <div class="imgColaborador3"></div>
             </a>
                 <span class="nombreColaborador">Yair</span>
@@ -93,27 +92,33 @@
         <div class="seccionSoluciones margenScroll" id="soluciones">
             <span class="tituloColaboradores"><strong> Conoce nuestras soluciones</strong></span>
             <div class="containerColaboradores">
+
                 <div class="colaborador1">
                 <a class="sobresalir" href="https://yairgaston.github.io/Registro-de-Usuario/" target="_blank">
                     <div class="imgSolucion1"></div>
                 </a>
-                <span class="nombreColaborador">Gustavo</span>
-                <p class="aptitudesColaborador">Desarrollador Web</p>
+                                
+                <span class="nombreSolucion">Registro de usuarios</span>
+                <p class="descripcionSolucion">Plataforma de registro de usuarios, donde podrás ingresar todos sus datos. </p>
+                <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
             </div>
 
             <div class="colaborador2">
                 <a class="sobresalir" href="">
                 <div class="imgSolucion2"></div>
             </a>
-                <span class="nombreColaborador">Jesica</span>
-                <p class="aptitudesColaborador">Desarrollador Web</p>
+            <span class="nombreSolucion">Registro de usuarios</span>
+            <p class="descripcionSolucion">Plataforma de registro de usuarios, donde podrás ingresar todos sus datos. </p>
+            <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
             </div>
+
             <div class="colaborador3">
                 <a class="sobresalir" href="">
                 <div class="imgSolucion3"></div>
             </a>
-                <span class="nombreColaborador">Yair</span>
-                <p class="aptitudesColaborador">Desarrollador Web</p>
+            <span class="nombreSolucion">Registro de usuarios</span>
+            <p class="descripcionSolucion">Plataforma de registro de usuarios, donde podrás ingresar todos sus datos. </p>
+            <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
             </div>
         </div>
         <a class="btn-verde" href="./contacto.html">Contáctanos</a>
