--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,7 +10,7 @@
         <!-- <link rel="stylesheet" href="../Style/style.css"> -->
         <link rel="stylesheet" href="../Style/stylePortfolio.css">
     <link rel="icon" type="imagen/ico" href="../img/favicon.svg">
-    <title>DevScrum</title>
+    <title>DevScrum - Tu evolución, nuestra prioridad</title>
 </head>
 
 <body>
@@ -24,11 +24,11 @@
                     </a>
                     </div>
                     <div class="enlaces">
-                        <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
-                        <a href="#nosotros">NOSOTROS</a>
-                        <a href="#soluciones">SOLUCIONES</a>
-                        <a href="#oficinas">OFICINAS</a>
-                        <a class="textoNegrita" href="./FormTresPasos.html">SOLICITAR REUNIÓN</a>
+                        <a class="botonConBorde" href="../contacto.html">CONTÁCTANOS</a>
+                        <a href="../index.html#nosotros">NOSOTROS</a>
+                        <a href="../index.html#soluciones">SOLUCIONES</a>
+                        <a href="../index.html#oficinas">OFICINAS</a>
+                        <a class="textoNegrita" href="../FormCompleto.html">SOLICITAR REUNIÓN</a>
                     </div>
                     <button class="btn-menu">
                         <i class="bi bi-list"></i>
@@ -56,7 +56,6 @@
                     Suelo llevar mi notebook a mis viajes para no dejar escapar una nueva idea.<br>
                     Mis hobbies: Ciclismo, Viajar, krav maga.</p>
         </div>
-
         <div class="seccionSoluciones">
             <span class="tituloSoluciones"> Mis desarrollos y colaboraciones</span>
             <div class="containerSoluciones">
@@ -89,10 +88,7 @@
             <p class="descripcionSolucion">Plataforma de registro de usuarios, donde podrás ingresar todos sus datos. </p>
             <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
             </div>
-        
-        
     </main>
-
     <footer>
         <div class="redesSociales">
         <div class="iconos">
@@ -107,7 +103,6 @@
         <a class="btn-rosa delFooter" href="./FormTresPasos.html">Solicitar reunión</a>
         <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
     </footer>
-
     <script src="../Js/script.js"></script>
 </body>
 </html>
