Corrigo enlaces en portfolio.

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -99,8 +99,8 @@
             <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="../img/icon face.svg" alt="Icono"></a>
         </div>        
         </div>
-        <a class="btn-verde delFooter1" href="./contacto.html">Contáctanos</a>
-        <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
+        <a class="btn-verde delFooter1" href="../contacto.html">Contáctanos</a>
+        <a class="btn-rosa delFooter" href="../FormCompleto.html">Solicitar reunión</a>
         <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
     </footer>
     <script src="../Js/script.js"></script>
