--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -8,7 +8,30 @@
     <title>FormularioTresPasos</title>
 </head>
 
-<header></header>
+<header>
+  <nav>
+      <div class="encabezadoFijo">
+          <div class="logo">
+              <a href="./index.html">
+              <img class="favicon" src="./img/favicon.svg" alt="Icono">
+              <h2 >DevScrum</h2>
+          </a>
+          </div>
+
+          <div class="enlaces">
+              <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
+              <a href="#nosotros">NOSOTROS</a>
+              <a href="#soluciones">SOLUCIONES</a>
+              <a href="#oficinas">OFICINAS</a>
+              <a class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
+          </div>
+          <button class="btn-menu">
+              <i class="bi bi-list"></i>
+          </button>
+      </div>
+  </nav>
+</header>
+
 <body>
     <div class="tab1" id="paso1">
         <h1>Con el fin de brindar una rápida respuesta y solución a nuestros clientes, le haremos algunas preguntas y le pediremos algunos datos:</h1>
@@ -87,6 +110,20 @@
 </body>
     <main></main>
 
-    <footer></footer>
+    <footer>
+      <div class="redesSociales">
+      <div class="iconos">
+          <a href="https://github.com/" target="_blank"><img class="Github" src="./img/icon github.svg" alt="Icono"></a>
+          <a href="https://www.linkedin.com/" target="_blank"><img class="Linkedin" src="./img/icon linkedin.svg" alt="Icono"></a>
+          <a href="https://www.youtube.com/" target="_blank"><img class="Youtube" src="./img/icon youtube.svg" alt="Icono"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img class="Instagram" src="./img/icon insta.svg" alt="Icono"></a>
+          <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="./img/icon face.svg" alt="Icono"></a>
+      </div>        
+      </div>
+
+      <a class="btn-verde delFooter1" href="./contacto.html">Contáctanos</a>
+      <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
+      <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
+  </footer>
 
 </html>
