--- a/Resumen.html
+++ b/Resumen.html
@@ -63,9 +63,9 @@
             </p>
         </div>
 
-        <div class="btn">
-        <input class="btn" type="submit" value="Cancelar">
-        <input class="btn" type="submit" value="Export PDF">
+        <div class="btnform">
+        <input class="btnCancelar" id="btnCancelar" type="submit" value="Cancelar">
+        <input class="btnExport" id="btnExport" type="submit" value="Export PDF">
         </div>
         
     </form>
