se agrega header fijo

--- a/contacto.html
+++ b/contacto.html
@@ -11,20 +11,27 @@
 
 <body>
     <header>
-        <section class="encabezado">
-            <div class="icono">
-                <img class="favicon" src="./img/favicon.svg" alt="Icono">
-                <h2 >DevScrum</h2>
+        <nav>
+            <div class="encabezadoFijo">
+                <div class="logo">
+                    <a href="../index.html">
+                    <img class="favicon" src="../img/favicon.svg" alt="Icono">
+                    <h2 >DevScrum</h2>
+                </a>
+                </div>
+                <div class="enlaces">
+                    <a class="botonConBorde" href="../contacto.html">CONTÁCTANOS</a>
+                    <a href="../index.html#nosotros">NOSOTROS</a>
+                    <a href="../index.html#soluciones">SOLUCIONES</a>
+                    <a href="../index.html#oficinas">OFICINAS</a>
+                    <a class="textoNegrita" href="../FormCompleto.html">SOLICITAR REUNIÓN</a>
+                </div>
+                <button class="btn-menu">
+                    <i class="bi bi-list"></i>
+                </button>
             </div>
-            <nav>
-                <a href="">CONTÁCTANOS</a>
-                <a href="">SOLUCIONES</a>
-                <a href="">NOSOTROS</a>
-                <a href="">OFICINAS</a>
-                <a href="">SOLICITAR REUNIÓN</a>
-            </nav>
-        </section>
-    </header>
+        </nav>
+</header>
     <main>
     <form>
         <h2>Contactanos</h2>
