--- a/contacto.html
+++ b/contacto.html
@@ -53,9 +53,9 @@
             <input type="text" name="Repetir Contraseña" placeholder="Repetir Contraseña">
         </div>
 
-        <div class="btn">
-        <input class="btn" type="submit" value="Enviar">
-        <input class="btn" type="submit" value="Cancelar">
+        <div class="btnContacto">
+        <input class="btnEnviar" type="submit" value="Enviar">
+        <input class="btnCancelar" type="submit" value="Cancelar">
         </div>
         
     </form>
