modificacion de rutas por error

--- a/pages/Resumen.html
+++ b/pages/Resumen.html
@@ -36,7 +36,7 @@
 </header>
     <main>
     <form>
-        <h1>Su solicitud fue exitosa</h1>
+        <h1 class="exito">Su solicitud fue exitosa</h1>
 
         <div class="datos">
             <a href=>Datos Personales:</a>
