se modifica estructura html y Css

--- a/pages/Resumen.html
+++ b/pages/Resumen.html
@@ -86,10 +86,10 @@
             </p>
         </div>
 
-        <div class="btnform">
+        <section class="btn">
         <input class="btnCancelar" id="btnCancelar" type="submit" value="Cancelar">
         <input class="btnExport" id="btnExport" type="submit" value="Export PDF">
-        </div>
+        </section>
         
     </section>
     </main>
